git Ignore change to ignore json files.

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ obj/
 appsettings.Development.json
 appsettings.Production.json
 launchSettings.json
+appsettings.json
 #Files extensions#
 *.user
 *.cache
