--- a/Exercise_DataSerialization/Exercise_DataSerialization.csproj
+++ b/Exercise_DataSerialization/Exercise_DataSerialization.csproj
@@ -22,4 +22,10 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="AppSettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
